# tasks

./: .gitignore  .otto-githooks-installed  CHANGELOG.md  LICENSE  LICENSE-DOCS  README.md  composer.json  phpunit.xml.dist  pytest.ini
api_python/: README.md  __init__.py  auth.py  config.py  db.py  main.py  requirements.txt  response.py  session.py
docs/: ASK-Q-PHASE-3-COMPOSER-UPGRADE-PRD.md  BASECAMP3_DOMAIN_PLAN.md  BASECAMP3_UX_OVERLAY_PLAN.md  CLIENT_VISIBILITY_ACCESS_MATRIX.md  CRITICAL_API_FLOWS.md  HEARTBEAT.md  HEARTBEAT_WIZARD_CONTEXT.md  MAJOR_WORKFLOWS.md  MODALITY-EMBEDDED-AGENT-CHAT-IN-SANCTUM-APP.md  PHP_TEST_BENCHMARK.md  Q-BRIDGE-OPS-RUNBOOK.md  Q-MEMORY-ALEX-SHOPIFY-INSTALL.md  Q-VERNAL-JOB-RULES.md  Q-VERNAL-PERSONA-CANONICAL.txt  Q-VERNAL-TOOL-PROFILE.md  SMCP-TASKS-TOOL-PROFILES.md  SMCP-TOOL-GOVERNANCE-PHASE.md  TASKS-2.0-CREATIVE-PITCH-DECK.md  TASKS-2.0-HUMAN-FIRST-VISION.md  WORKFLOWS.md  api-authorization-and-product-notes.md  api.md  development.md  github-repository-setup-guide.md  integrations.md  otto-smcp-cursor.md  roadmap-inline-assets.md  security.md  tasks-report-rubric.md  user-guide.md  ux-audit-2026-05-04.md
public/: index.php  shared-document.php
scripts/: setup_heartbeat.sh
tasks_sdk/: README.md  __init__.py  client.py  exceptions.py  pyproject.toml
tests/: conftest.py
tools/: backfill_legacy_tasks.php  backfill_q_bridge_api_keys.php  backfill_upgrade_project_tasks.py  board-export-worker.php  e2e_q_bridge_seed_message.php  install-otto-smcp-runtime.sh  lettatest-install-q-smcp.sh  lettatest_attach_q_smcp.py  (+16 more)
(+296 files in other folders)
