[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tasks-sdk"
version = "0.1.0"
description = "Python SDK for tasks.technonomicon.net API"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
