[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["tasks_sdk*"]

[project]
name = "tasks-sdk"
version = "0.2.6"
description = "Python SDK for Sanctum Tasks API"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
